fix: final working frontend with Render API

--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
       const ma5 = parseFloat(document.getElementById("ma5").value);
       const volume = parseFloat(document.getElementById("volume").value);
 
-      const res = await fetch("https://stock-predictor-o32n.onrender.com/predict", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ ma5: ma5, volume: volume })
-      });
+      try {
+        const res = await fetch("https://stock-predictor-o32n.onrender.com/predict", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ ma5: ma5, volume: volume })
+        });
 
-      const data = await res.json();
-      document.getElementById("result").innerText = `📈 예측 주가: $${data.predicted_price}`;
+        const data = await res.json();
+        document.getElementById("result").innerText = `📈 예측 주가: $${data.predicted_price}`;
+      } catch (error) {
+        document.getElementById("result").innerText = "❌ 예측 실패: 서버 응답 없음";
+        console.error(error);
+      }
     });
   </script>
 </body>
